Project

General

Profile

Actions

Bug #19122

closed

pre-jewel "osd rm" incrementals are misinterpreted (kernel client)

Added by Ilya Dryomov about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
libceph
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Crash signature (v1):
Crash signature (v2):

Description

Carry over the fix for #19119.


Related issues 1 (0 open1 closed)

Related to Linux kernel client - Bug #14901: misdirected requests on 4.2 during rebalancingResolvedIlya Dryomov02/26/2016

Actions
Actions #1

Updated by Ilya Dryomov about 7 years ago

  • Related to Bug #14901: misdirected requests on 4.2 during rebalancing added
Actions #3

Updated by Ilya Dryomov about 7 years ago

  • Status changed from Pending Backport to Resolved

In 4.4.58, 4.9.19, 4.10.7.

Actions

Also available in: Atom PDF